ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  labels:
    name: ingress-nginx
spec:
  ingressClassName: nginx
  rules:
  - host: fdis.ibmeet.xyz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: fdis-plan-service
            port:
              number: 80
  - host: amuzic.ibmeet.xyz
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: amuzic-service
            port:
              number: 80
